test/typeerrors/ex5.act
def f(x,y):
    return x+y

def apply(g,x):
    return g(x)

a = apply(f,3)

