test/typeerrors/ex5.golden
Building file ../test/typeerrors/ex5.act
  Compiling ex5.act for release

ERROR: Error when compiling ex5 module: Type error

  |
7 |a = apply(f,3)
  |    ^^^^^^^^^^


  |
4 |def apply(g,x):
  |    ^^^^^
Type incompatibility between definition of and call of apply (too few arguments in call)
apply is inferred to have a type of the form _(_(A) -> B, A) -> B

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

